--- a/syntheditor/package.json
+++ b/syntheditor/package.json
@@ -12,9 +12,10 @@
     "@emotion/react": "^11.13.0",
     "@emotion/styled": "^11.13.0",
     "@mui/material": "^5.16.4",
-    "next": "14.2.5",
+    "next": "^14.2.18",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "webbluetooth": "^3.2.1"
   },
   "devDependencies": {
     "@types/node": "^20",
