--- a/syntheditor/package.json
+++ b/syntheditor/package.json
@@ -12,6 +12,7 @@
     "@emotion/react": "^11.13.0",
     "@emotion/styled": "^11.13.0",
     "@mui/material": "^5.16.4",
+    "@types/web-bluetooth": "^0.0.20",
     "next": "^14.2.18",
     "react": "^18",
     "react-dom": "^18",
