--- a/syntheditor/package.json
+++ b/syntheditor/package.json
@@ -14,6 +14,7 @@
     "@msgpack/msgpack": "^3.0.0-beta2",
     "@mui/material": "^5.16.4",
     "@types/web-bluetooth": "^0.0.20",
+    "eventemitter3": "^5.0.1",
     "next": "^14.2.18",
     "react": "^18",
     "react-dom": "^18",
