--- a/syntheditor/package.json
+++ b/syntheditor/package.json
@@ -18,6 +18,7 @@
     "next": "^14.2.18",
     "react": "^18",
     "react-dom": "^18",
+    "use-timer": "^2.0.1",
     "webbluetooth": "^3.2.1"
   },
   "devDependencies": {
