--- a/syntheditor/package.json
+++ b/syntheditor/package.json
@@ -6,7 +6,8 @@
     "dev": "WATCHPACK_POLLING=true next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "test": "jest"
   },
   "dependencies": {
     "@emotion/react": "^11.13.0",
@@ -14,19 +15,26 @@
     "@msgpack/msgpack": "^3.0.0-beta2",
     "@mui/material": "^5.16.4",
     "@types/web-bluetooth": "^0.0.20",
-    "eventemitter3": "^5.0.1",
     "next": "^14.2.18",
     "react": "^18",
     "react-dom": "^18",
-    "use-timer": "^2.0.1",
     "webbluetooth": "^3.2.1"
   },
   "devDependencies": {
+    "@testing-library/jest-dom": "^6.6.3",
+    "@testing-library/react": "^16.1.0",
+    "@types/jest": "^29.5.14",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "eslint": "^8",
     "eslint-config-next": "14.2.5",
-    "typescript": "^5"
+    "eventemitter3": "^5.0.1",
+    "jest": "^29.7.0",
+    "jest-environment-jsdom": "^29.7.0",
+    "ts-jest": "^29.2.5",
+    "ts-node": "^10.9.2",
+    "typescript": "^5",
+    "use-timer": "^2.0.1"
   }
 }
