--- a/syntheditor/package.json
+++ b/syntheditor/package.json
@@ -14,28 +14,37 @@
     "@emotion/react": "^11.13.0",
     "@emotion/styled": "^11.13.0",
     "@msgpack/msgpack": "^3.0.0-beta2",
-    "@mui/icons-material": "^5.16.14",
-    "@mui/material": "^5.16.4",
+    "@radix-ui/react-slot": "^1.2.3",
     "@types/web-bluetooth": "^0.0.20",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
+    "lucide-react": "^0.513.0",
     "next": "^14.2.18",
+    "next-themes": "^0.4.6",
     "react": "^18",
     "react-dom": "^18",
+    "tailwind-merge": "^3.3.0",
     "webbluetooth": "^3.2.1"
   },
   "devDependencies": {
+    "@tailwindcss/postcss": "^4.1.8",
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.1.0",
     "@types/jest": "^29.5.14",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "autoprefixer": "^10.4.21",
     "eslint": "^8",
     "eslint-config-next": "14.2.5",
     "eventemitter3": "^5.0.1",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
+    "postcss": "^8.5.4",
+    "tailwindcss": "^4.1.8",
     "ts-jest": "^29.2.5",
     "ts-node": "^10.9.2",
+    "tw-animate-css": "^1.3.4",
     "typescript": "^5",
     "use-timer": "^2.0.1"
   }
