--- a/syntheditor/package.json
+++ b/syntheditor/package.json
@@ -15,6 +15,7 @@
     "@emotion/styled": "^11.13.0",
     "@msgpack/msgpack": "^3.0.0-beta2",
     "@radix-ui/react-slot": "^1.2.3",
+    "@radix-ui/react-toggle": "^1.1.9",
     "@types/web-bluetooth": "^0.0.20",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
